# refleak

./: .coveragerc  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.rst  pyproject.toml
.github/workflows/: autofix.yml  automerge.yml  release.yml  tests.yml
refleak/: __init__.py  _core.py
refleak/testing/: __init__.py  _core.py
refleak/testing/tests/: test_core.py
refleak/tests/: test_core.py
